updated old tests + new tests for 50% coverage